tests/baselines/reference/inferredFunctionReturnTypeIsEmptyType.errors.txt
tests/cases/compiler/inferredFunctionReturnTypeIsEmptyType.ts(1,10): error TS2354: No best common type exists among return expressions.
tests/cases/compiler/inferredFunctionReturnTypeIsEmptyType.ts(6,9): error TS7027: Unreachable code detected.


==== tests/cases/compiler/inferredFunctionReturnTypeIsEmptyType.ts (2 errors) ====
    function foo() {
             ~~~
!!! error TS2354: No best common type exists among return expressions.
        if (true) {
            return 42;
        }
        else {
            return "42";
            ~~~~~~
!!! error TS7027: Unreachable code detected.
        }
    };
    